Inicio de sesión terminado, quitado __v al convertir a json en modelos, protección de rutas con jwt

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,43 @@
     <li>
         <ul>lmao</ul>
         <ul>aqui va la parte de godo</ul>
+
+        <!-- Inicio con google -->
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+      <div id="g_id_onload"
+         data-client_id="86407381520-b22aanmqdi3q61d62sec545cr2curik1.apps.googleusercontent.com"
+         data-auto_prompt="false"
+         data-callback="handleCredentialResponse">
+      </div>
+      <div class="g_id_signin"
+         data-type="standard"
+         data-size="large"
+         data-theme="outline"
+         data-text="sign_in_with"
+         data-shape="rectangular"
+         data-logo_alignment="left">
+      </div>
     </li>
+
+    <script>
+        function handleCredentialResponse(response) {
+
+            const body = { id_token: response.credential };
+
+            fetch('http://localhost:8080/api/auth/logIn', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(body)
+            })
+                .then( resp => resp.json() )
+                .then( resp => {
+                    console.log(resp)
+                })
+                .catch( err => console.warn);
+        }
+    </script>
 </body>
 </html>
