--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,15 @@
                 .then( resp => resp.json() )
                 .then( resp => {
                     console.log(resp);
-                    headers.append('jopakatoken', resp.jwt);
+                    if(resp.success === false) return;
                     if(resp.tipo === 'Administrador'){
-                        usuario.textContent = 'Hola nuevo admin';
+                        //Cambiar a pestaña de administrador
+                    }
+                    else if (resp.tipo === 'Nutriólogo'){
+                        //Cambiar a ventana de nutriologo
+                    }
+                    else if(resp.tipo === 'Cliente'){
+                        //Cambiar a ventana de cliente
                     }
                 })
                 .catch( err => console.warn);
@@ -67,21 +73,22 @@
 
         userdata.onclick = () => {
             console.log('Token: ' + headers.get('jopakatoken'));
-            fetch('http://localhost:8080/api/nutriologo/data', {
+
+            const opciones = {
                 method: 'GET',
                 headers
-            })
-            .then( resp => resp.json() )
+            };
+
+            let id = '6260345d8753a039f90a46e4';
+
+            fetch('http://localhost:8080/api/nutriologo/cliente?id=' + id, opciones)
+                .then( resp => resp.json() )
                 .then( resp => {
-                    console.log(resp)
                     if(resp.success === false) {
                         usuario.textContent = "Hubo un error";
                         return;
                     }
-                    const { nombreCompleto, especialidades } = resp.nutriologo;
-
-                    usuario.textContent = 'Bienvenido ' + nombreCompleto;
-                    console.log(especialidades);
+                    console.log(resp);
                 })
                 .catch( err => console.log(err));
         }
