Reparación de búsqueda y eventos de sockets

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
       </div>
     </ul>
 
+    <script src="socket.io/socket.io.js"></script>
+    <script src="js/socket-custom.js"></script>
     <script>
 
         let usuario = document.getElementById("tipo-usuario");
