--- a/src/msg.html
+++ b/src/msg.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 font-family="Times New Roman"> Solicitud de empleo aceptada</h1><img src="" alt="Bienvenido"><p>Hola  tu solicitud de empleo ha sido aceptada, ya puedes iniciar sesión con tu cuenta de nutriologo!</p><img src="https://res.cloudinary.com/jopaka-com/image/upload/v1652058046/JOPAKA_LOGO_lunx6k.png" alt="logo_jopaka" width="350px" height="75px">
+    <h1 font-family="Times New Roman"> Solicitud de empleo aceptada</h1>
+    <p>Hola  tu solicitud de empleo ha sido aceptada, ya puedes iniciar sesión con tu cuenta de nutriologo!</p>
+    <img src="https://res.cloudinary.com/jopaka-com/image/upload/v1652058046/JOPAKA_LOGO_lunx6k.png" alt="logo_jopaka" width="350px" height="75px">
 </body>
 </html>
