Intento de uso del API de calendar

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
         <div id="g_id_onload"
             data-client_id="86407381520-b22aanmqdi3q61d62sec545cr2curik1.apps.googleusercontent.com"
             data-auto_prompt="false"
-            data-callback="handleCredentialResponse">
+            data-callback="handleCredentialResponse"
+            scope="https://www.googleapis.com/auth/calendar">
         </div>
         <div class="g_id_signin"
             data-type="standard"
